--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "pino": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
