--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "project example for publisher in topic kafka with nodeJs exposing API rest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "kafkajs": "^1.15.0",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
